@@ -6,6 +6,7 @@
 	update: show appropriate message, if a record cannot be found
 	update: add Cisco dictionary entry for WS-CBS3030-DEL. closes ticket 225 (by jthurman)
 	update: add OS, router, fibre switch dictionary entries for ticket 238 (by Aaron)
+	update: update: added comment field for IPv4 networks
 	update: allow variations of FC WWN as an L2 address (by killsystem)
 	update: port L2 address can be reused on the same object
 	update: same port name can be repeated for an object with different types
